updating the list meno above

--- a/locale/fa/LC_MESSAGES/django.po
+++ b/locale/fa/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-19 16:57+0330\n"
+"POT-Creation-Date: 2024-05-17 02:39+0330\n"
 "PO-Revision-Date: 2024-04-19 16:39+0330\n"
 "Last-Translator:   <uniquesmaili@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,22 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Translated-Using: django-rosetta 0.10.0\n"
+
+#: templates/_base.html:103
+msgid "log out"
+msgstr "خروج"
+
+#: templates/_base.html:106
+msgid "profile"
+msgstr "حساب کاربری"
+
+#: templates/_base.html:112
+msgid "login"
+msgstr "ورود"
+
+#: templates/_base.html:116
+msgid "sign up"
+msgstr "ثبت نام"
 
 #: templates/account/email/email_confirmation_message.txt:4
 #, python-format
@@ -85,8 +101,6 @@ msgstr ""
 #: templates/account/password_reset_from_key_done.html:13
 msgid "your password has reset successfully"
 msgstr "رمز عبور شما با موفقیت تغییر یافت"
-
-
 
 #: venv/lib/python3.10/site-packages/django/contrib/messages/apps.py:16
 msgid "Messages"
@@ -1301,5 +1315,3 @@ msgstr ""
 #: venv/lib/python3.10/site-packages/django/views/templates/default_urlconf.html:248
 msgid "Connect, get help, or contribute"
 msgstr ""
-
-
