--- a/products/locale/fa/LC_MESSAGES/django.po
+++ b/products/locale/fa/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-23 20:49+0330\n"
+"POT-Creation-Date: 2024-05-23 21:03+0330\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -141,25 +141,24 @@ msgstr "نظر خود را بنویسید"
 msgid "submit"
 msgstr "ثبت"
 
-#: templates/products/product_detail.html:191
-msgid "To write your comment please"
-msgstr "برای اینکه نظر خود را ثبت کنید لطفا"
 
-#: templates/products/product_detail.html:192
-msgid "login"
-msgstr "وارد اکانت شوید"
-
-#: templates/products/product_detail.html:192
-msgid "or"
-msgstr "یا"
+#| msgid "To write your comment please"
+msgid "To write your comment please login or signup"
+msgstr "برای اینکه نظر خود را ثبت کنید لطفا وارد حساب کاربری خود شوید"
 
 #: templates/products/product_detail.html:193
-msgid "sign up"
-msgstr "ثبت نام کنید"
+msgid "login"
+msgstr "وارد اکانت شوید"
 
 #: views.py:43
 msgid "your comment has been successfully sent"
 msgstr "متشکریم از دیدگاه شما"
+
+#~ msgid "or"
+#~ msgstr "یا"
+
+#~ msgid "sign up"
+#~ msgstr "ثبت نام کنید"
 
 #~ msgid "product detail of"
 #~ msgstr "جزئیات محصول"
